k8s/apps/audiobookshelf/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: audiobookshelf
  namespace: audiobookshelf
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Audiobookshelf"
    gethomepage.dev/description: "Audiobook and podcast server"
    gethomepage.dev/group: "media"
    gethomepage.dev/icon: "audiobookshelf.svg"
    gethomepage.dev/href: "https://audiobookshelf.item.fyi"
    gethomepage.dev/siteMonitor: "http://audiobookshelf.audiobookshelf.svc.cluster.local"
    gethomepage.dev/pod-selector: "app.kubernetes.io/name=audiobookshelf"
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`audiobookshelf.item.fyi`)
      services:
        - name: keda-add-ons-http-interceptor-proxy
          namespace: keda
          port: 8080
  tls: {}
